--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My GitHub Pages Site</title>
+    <title>Hazirah Idris Portfolio Website</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header>
         <h1>Welcome to My GitHub Pages Website</h1>
-        <p>This is a clean, minimal starter template.</p>
+        <p>AI Graduate with banking domain experience.</p>
     </header>
 
     <main>
